# RedPandas

./: .gitignore  LICENSE  README.md  go.mod  go.sum
auth/: auth.go  auth_test.go  go.mod  go.sum
cli/: LICENSE  cli.go  go.mod  hi.csv  main.go
cli/cmd/: root.go  upload.go
interpreter/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.builtnorun  Rocket.toml  cloudbuild.yml
interpreter/src/: main.rs  polarsheader.py  structs.rs
server/: .gitignore  index.js  package-lock.json  package.json  redpandas-376106-0cf5dadfa633.json
shitty-orchestrator/: index.js  package.json
web/: .gitignore  middleware.ts  next.config.js  package.json
web/components/: Auth.tsx  Banner.tsx  ChatGPT.tsx  Header.tsx  Loading.tsx
web/components/project/: CSVUploader.tsx  Commands.tsx  Console.tsx  Dataset.tsx  Figures.tsx  ProjectHeader.tsx  RunCommand.tsx
web/components/projects/: CreateProject.tsx  ProjectCont.tsx
web/lib/: schemas.ts
web/lib/client/: ably.ts  trpc.ts
web/lib/server/: ably.ts  models.ts
web/pages/: 404.tsx  500.tsx  _app.tsx  approve.tsx  index.tsx
web/pages/api/: orchestrator-hook.ts
web/pages/api/trpc/: [trpc].ts
web/pages/projects/: [project].tsx
web/server/: context.ts  trpc.ts
web/server/routers/: _app.ts  project.ts
web/styles/: globals.css
web/types/: env.d.ts
