[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
reqwest = "0.11.14"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snafu = "0.7.4"
tokio = {version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"]}
urlencoding = "2.1.2"


[profile.release]
lto = true
codegen-units = 1